<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ballot_logo"
            android:contentDescription="@string/description_launch_icon"
            app:layout_constraintBottom_toTopOf="@+id/upcomingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/upcomingButton"
            style="@style/launchButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:contentDescription="@string/text_upcoming_elections"
            android:text="@string/text_upcoming_elections"
            app:layout_constraintBottom_toTopOf="@id/representativeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/representativeButton"
            style="@style/launchButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/button_text_representative"
            android:text="@string/button_text_representative"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>