<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <View
            android:id="@+id/progress_bar_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="5dp"
            android:background="@color/transparency"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/progress_bar_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{voterInfoViewModel.showProgressBar ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="progress_bar,progress_bar_background"
            tools:visibility="gone" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{voterInfoViewModel.toolbarTitle}"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date_header"
            style="@style/electionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/election_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:setDateAsText="@{voterInfoViewModel.voterDate}"
            app:layout_constraintTop_toBottomOf="@id/election_date_header"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/election_information"
            style="@style/electionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@{voterInfoViewModel.stateHeader}"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintStart_toStartOf="@id/election_information"
            app:layout_constraintTop_toBottomOf="@id/election_information"
            tools:text="Sample Sample" />

        <View
            android:id="@+id/sate_header_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:background="@color/gray50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_open_in_new_24"
            android:drawablePadding="@dimen/default_padding"
            android:onClick="@{() -> voterInfoViewModel.openLink(voterInfoViewModel.ballotInfoLink)}"
            android:padding="@dimen/default_padding"
            android:text="@string/ballot_information"
            android:textSize="@dimen/text_size_16sp"
            android:visibility="@{voterInfoViewModel.ballotInfoLink!= null ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sate_header_line" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_open_in_new_24"
            android:drawablePadding="@dimen/default_padding"
            android:onClick="@{() -> voterInfoViewModel.openLink(voterInfoViewModel.locationLink)}"
            android:padding="@dimen/default_padding"
            android:text="@string/voting_locations"
            android:textSize="@dimen/text_size_16sp"
            android:visibility="@{voterInfoViewModel.locationLink!= null ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{voterInfoViewModel.stateAddress!= null ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@{voterInfoViewModel.correspondence}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:text="Sample" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{voterInfoViewModel.stateAddress}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="Sample" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="@{() -> voterInfoViewModel.onSaveElection()}"
            android:textColor="@color/white"
            android:voterButtonText="@{voterInfoViewModel.hasAlreadySavedElection}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>